cmake_minimum_required(VERSION 3.21)
project(OJ)

set(CMAKE_CXX_STANDARD 11)

add_executable(OJ main.cpp 0/t1.cpp 0/t1.h chapter1/Init.cpp chapter1/Init.h chapter2/Brute.cpp chapter2/Brute.h chapter3/Sort.cpp chapter3/Sort.h chapter3/Search.cpp chapter3/Search.h chapter4/dString.cpp chapter4/dString.h)
