cmake_minimum_required(VERSION 3.21)
project(OJ)

set(CMAKE_CXX_STANDARD 11)

add_executable(OJ main.cpp 0/t1.cpp 0/t1.h chapter1/Init.cpp chapter1/Init.h chapter2/Brute.cpp chapter2/Brute.h chapter3/Sort.cpp chapter3/Sort.h chapter3/Search.cpp chapter3/Search.h chapter4/dString.cpp chapter4/dString.h chapter5/Vector.cpp chapter5/Vector.h chapter5/Queue.cpp chapter5/Queue.h chapter5/Stack.cpp chapter5/Stack.h chapter6/Base.cpp chapter6/Base.h chapter6/Lm.cpp chapter6/Lm.h chapter6/Prime.cpp chapter6/Prime.h chapter6/PrimeFactor.cpp chapter6/PrimeFactor.h chapter6/Power.cpp chapter6/Power.h chapter6/BigInteger.cpp chapter6/BigInteger.h chapter7/Greed.cpp chapter7/Greed.h chapter8/Recursion.cpp chapter8/Recursion.h chapter8/DivideAndConquer.cpp chapter8/DivideAndConquer.h)
